Name:                hs-logo
Version:             0.5.1
Synopsis:            Logo turtle graphics interpreter
Description:         Interpreter for the Logo programming language,
                     specialised for turtle graphics.
Homepage:            http://RadiantCuriosity.github.com/hs-logo
License:             BSD3
License-File:        LICENSE
Author:              Deepak Jois
Maintainer:          deepak.jois@gmail.com
Build-Type:          Simple

Category:            Parser
Cabal-Version:       >=1.8
Data-Files:          README.md

Executable           hs-logo
  Ghc-Options:       -Wall -fno-warn-unused-do-bind
  Hs-Source-Dirs:    src
  Main-Is:           Logo.hs
  Other-Modules:     Logo.Types
                     Logo.TokenParser
                     Logo.Evaluator
                     Logo.Builtins
                     Logo.Builtins.IO
                     Logo.Builtins.Turtle
                     Logo.Builtins.Arithmetic
                     Logo.Builtins.Control
                     Diagrams.TwoD.Path.Turtle.Internal
                     Diagrams.TwoD.Path.Turtle
  Build-Depends:     base        >= 4.2    && <  5,
                     containers  >= 0.3    && <  0.7,
                     mtl         >= 1      && < 3,
                     parsec      >= 3.0    && <  3.2,
                     cmdargs     >= 0.6    && < 1,
                     random      >= 1.0,
                     parsec-numbers,
                     colour,
                     lens >= 4.0 && < 6,
                     diagrams-svg >= 1.1 && < 1.5,
                     diagrams-lib >= 1.2 && < 1.5

Test-suite turtle-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall

  Other-modules: Diagrams.TwoD.Path.Turtle.Tests

  Build-depends:
    HUnit                      >= 1.2 && < 1.7,
    QuickCheck                 >= 2.4 && < 2.16,
    containers                 >= 0.3 && < 0.7,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.2 && < 0.4,
    test-framework-quickcheck2 >= 0.2 && < 0.4,
    -- Copied from regular dependencies
    base        >= 4.2    && <  5,
    containers  >= 0.3    && <  0.7,
    mtl         >= 1      && <  3.0,
    parsec      >= 3.0    && <  3.2,
    cmdargs     >= 0.6    && < 1,
    random      >= 1.0,
    parsec-numbers,
    diagrams-svg >= 1.1 && < 1.5,
    diagrams-lib >= 1.2 && < 1.5,
    lens >= 4.0 && < 6

Source-Repository head
  type: git
  location: https://github.com/RadiantCuriosity/hs-logo
