cabal-version:       2.4
name:                hs-logo-site
version:             0.1.0.0
build-type:          Simple

executable site
  main-is:             Site.hs
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , filepath
  ghc-options:         -dynamic
  default-language:    Haskell2010
